--- a/src/Interfaz/RecRegistrarFactura.form
+++ b/src/Interfaz/RecRegistrarFactura.form
@@ -134,10 +134,12 @@
                       <Component id="jSaludo2" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jFModoPago" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
-                      <Component id="jPlato" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jFCostoExtra" alignment="1" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jFModoPago" alignment="3" min="-2" pref="38" max="-2" attributes="0"/>
+                          <Component id="jPlato" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
